# SocialPulseBackend

./: .gitignore  Makefile  README.md  pyproject.toml
sandbox/: db.sqlite3
sandbox/accounts/: decorators.py  logger.py  logic.py  models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
sandbox/accounts/migrations/: 0001_initial.py  0002_alter_telegramtoken_expires_at.py  0002_customuser_tg_id.py  0002_group_service_account_group_user.py  0003_alter_telegramtoken_expires_at_emailactivate.py  0003_customuser_phone_number.py  0003_remove_serviceaccount_groups_platform_alias_and_more.py  0004_alter_emailactivate_expires_at_and_more.py  0004_alter_platform_alias.py  0004_remove_customuser_phone_number.py  0005_alter_group_platform_remove_serviceaccount_platform_and_more.py  (+10 more)
sandbox/admin_panel/: permissions.py  serializers.py  urls.py  utils.py  views.py
sandbox/sandbox/: settings.py  urls.py
session/: anon.session
src/: manage.py
src/SocialPulse/: asgi.py  settings.py  urls.py
src/accounts/: models.py  serializers.py  urls.py  views.py
src/admin_panel/: models.py  permissions.py  serializers.py  urls.py  utils.py  views.py
src/common/: config.py  logger.py
src/reports/: models.py  urls.py
src/service_accounts/: apps.py  models.py  permissions.py  urls.py
src/social_admin/: apps.py  urls.py
src/social_auth/: models.py  urls.py
src/social_entities/: apps.py  models.py  permissions.py  urls.py
src/social_pulse/: asgi.py  settings.py  urls.py  wsgi.py
src/stats/: models.py  urls.py
src/users/: models.py  urls.py
(+110 files in other folders)
